templates/jupyter_template.yaml
---
# Source: jupyter/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-jupyter
  annotations:
    appstore.uninett.no/contact_email: example@sigma2.no
  labels:
    app: release-name-jupyter
    chart: "jupyter-1.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: release-name-jupyter
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-ingress
      ports:
        - protocol: TCP
          port: 8080
---
# Source: jupyter/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-jupyter-all
  annotations:
    appstore.uninett.no/contact_email: example@sigma2.no
  labels:
    app: release-name-jupyter
    chart: "jupyter-1.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: release-name-jupyter
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: default
      ports:
        - protocol: TCP
---
# Source: jupyter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-jupyter
  annotations:
    appstore.uninett.no/contact_email: example@sigma2.no
  labels:
    app: release-name-jupyter
    chart: "jupyter-1.1.1"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: release-name-jupyter-service
  selector:
    app: release-name-jupyter
---
# Source: jupyter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-jupyter
  labels:
    app: release-name-jupyter
    chart: "jupyter-1.1.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    appstore.uninett.no/contact_email: example@sigma2.no
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: release-name-jupyter
        release: release-name
  template:
    metadata:
      annotations:
        checksum/config: b1eafbda904dcd3447ba0e1d9844d3d7af32d038d6ddee8175340b852a1c152a
        appstore.uninett.no/contact_email: example@sigma2.no
      labels:
        app: release-name-jupyter
        chart: "jupyter-1.1.1"
        release: "release-name"
        heritage: "Helm"
    spec:
      volumes:
        - name: oidcconfig
          secret:
            secretName: release-name-jupyter
        - name: notebook-config
          configMap:
            name: release-name-jupyter
            items:
            - key: notebook_config.py
              path: notebook_config.py
        - name: passwd
          configMap:
            name: release-name-jupyter
            items:
            - key: passwd
              path: passwd
        - name: group
          configMap:
            name: release-name-jupyter
            items:
            - key: group
              path: group
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 256M
      hostname: release-name-jupyter
      securityContext:
        runAsNonRoot: true
        fsGroup: 999
        
      containers:
      - name: auth-proxy
        image: sigma2as/goidc-proxy:next
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        securityContext:
          runAsUser: 65534
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
          - name: oidcconfig
            mountPath: /conf
        workingDir: /conf
      - name: jupyter
        image: sigma2as/jupyter-spark:20240411-ee73753
        args: ["/usr/local/bin/start-notebook.sh"]
        resources:
          requests:
            cpu: 1
            memory: 1G
            nvidia.com/gpu: 0
          limits:
            cpu: 2
            memory: 1G
            nvidia.com/gpu: 0
        ports:
        - containerPort: 8888
        securityContext:
          runAsUser: 999
          runAsGroup: 999
        volumeMounts:
        - name: notebook-config
          mountPath: /home/notebook/.jupyter/notebook_config.py
          subPath: notebook_config.py
        
        - name: passwd
          mountPath: /etc/passwd
          subPath: passwd
        - name: group
          mountPath: /etc/group
          subPath: group
        - name: shm
          mountPath: /dev/shm
---
# Source: jupyter/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-jupyter
  labels:
    app: release-name-jupyter
    chart: "jupyter-1.1.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    appstore.uninett.no/contact_email: example@sigma2.no
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - secretName: wildcard-tls
      hosts:
         - local-chart.example.com
  rules:
    - host: local-chart.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-jupyter
                port: 
                  number: 80
